dist/media/Ingress.sonarr.k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: sonarr
  namespace: media
spec:
  rules:
    - host: sonarr.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: sonarr
                port:
                  number: 8989
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - sonarr.cmdcentral.xyz
      secretName: media-tls
